# VcpkgExperiment

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Info.plist  README.md  setup-vcpkg.bat  setup-vcpkg.sh  vcpkg.json
sources/: main.cpp
